<?xml version="1.0" encoding="utf-8"?>
<!--S1514428
Cameron Knox
Computing-->


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- TITLE -->
    <LinearLayout
        android:id="@+id/dialog_date_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="20dp"
        android:background="@color/dialog_title_background">
        <TextView
            style="@style/DialogTextStyle"
            android:text="@string/select_date"
            android:textColor="@color/dialog_title_text"/>
    </LinearLayout>

    <!-- BODY -->
    <TableLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_date_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:padding="20dp">
        <TableRow android:padding="10dp">
            <TextView
                style="@style/DialogTextStyle"
                android:text="@string/select_start_date"
                android:gravity="left"/>
            <TextView
                android:id="@+id/startDate"
                style="@style/DialogTextStyle"/>
        </TableRow>
        <TableRow android:padding="10dp">
            <TextView
                style="@style/DialogTextStyle"
                android:text="@string/select_end_date"
                android:gravity="left"/>
            <TextView
                android:id="@+id/endDate"
                style="@style/DialogTextStyle"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>